--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Teh most basic Parcel/TypeScript/React/SCSS boilerplate evar",
   "main": "src/index.tsx",
   "scripts": {
-    "start": "parcel src/index.html"
+    "start": "parcel src/index.html",
+    "build": "parcel build src/index.html"
   },
   "repository": {
     "type": "git",
