--- a/package.json
+++ b/package.json
@@ -24,12 +24,6 @@
   },
   "homepage": "https://github.com/jereddanielson/parcel-boilerplate#readme",
   "devDependencies": {
-    "parcel-bundler": "^1.12.4",
-    "sass": "^1.23.7",
-    "typescript": "^3.7.2"
-  },
-  "dependencies": {
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "parcel-bundler": "^1.12.4"
   }
 }
